# genai-bootcamp

./: README.md  getting-started.md  github-actions.yaml
.github/workflows/: reusable-deploy-cdk.yaml  wk5-1-hello-world.yaml  wk5-2-weather.yaml  wk6-1-flightai-cs.yaml  wk6-2-guardrails.yaml  wk6-3-document-extract.yaml  wk7-1-s3-vectors.yaml  wk7-2-digital-twin-revisited.yaml  wk8-1-digital-twin-admin.yaml
week5/1-hello-world/: app.py  pyproject.toml
week5/2-weather/: README.md  app.py  pyproject.toml
week5/3-flightai-customer-service/: .gitignore  README.md  app.py
week6/1-flightai-customer-service/: pyproject.toml
week6/1-flightai-customer-service/csbot/backend/src/: TODO.md  pyproject.toml
week6/1-flightai-customer-service/csbot/backend/src/app/: flight.py  main.py  trip.py
week6/2-guardrails/: pyproject.toml
week6/3-document-extractor/: app.py  pyproject.toml
week6/3-document-extractor/document_extractor/: stack.py
week6/3-document-extractor/document_extractor/backend/: fn.py  infra.py
week6/3-document-extractor/document_extractor/backend/extractor/: main.py  pyproject.toml  requirements.txt
week6/3-document-extractor/document_extractor/backend/input_validator/: main.py  pyproject.toml
week6/3-document-extractor/document_extractor/backend/output_validator/: main.py  pyproject.toml
week6/3-document-extractor/tests/unit/: test_2_document_extractor_stack.py
week7/1-s3-vectors/: .gitignore  app.py  pyproject.toml
week7/2-digital-twin-revisited/: app.py  pyproject.toml
week8/: README.md
week8/1-admin-ui/: app.py
(+61 files in other folders)
