[project]
name = "3-document-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.202.0",
    "constructs>=10.0.0,<11.0.0",
    "strands-agents>=1.15.0",
]

[dependency-groups]
dev = [
    "pytest==6.2.5",
]

[tool.uv.workspace]
members = [
    "document-extractor/backend/input-validator",
]
