[project]
name = "csbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.3",
    "fastapi>=0.116.0",
    "pydantic>=2.11.7",
    "strands-agents>=0.2.1",
    "strands-agents-tools>=0.1.8",
    "uvicorn>=0.35.0",
]
